# ChangeLog for dev-python/pygtk
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/pygtk/ChangeLog,v 1.76 2005/03/15 12:18:05 liquidx Exp $

  15 Mar 2005; Alastair Tse <liquidx@gentoo.org> pygtk-2.4.1.ebuild,
  pygtk-2.6.0.ebuild:
  more multilib fixes

  08 Mar 2005; Alastair Tse <liquidx@gentoo.org> pygtk-2.6.0.ebuild:
  add python numeric dep

*pygtk-2.6.0 (08 Mar 2005)

  08 Mar 2005; Alastair Tse <liquidx@gentoo.org> -pygtk-2.4.0.ebuild,
  +pygtk-2.6.0.ebuild:
  version bump, now requires gtk+-2.6. fix get_libdir in pkg_postinst and
  pkg_postrm. (#76791)

  26 Feb 2005; Jeremy Huddleston <eradicator@gentoo.org> pygtk-2.4.1.ebuild:
  Multilib fixes.

  04 Feb 2005; Bryan Østergaard <kloeri@gentoo.org> pygtk-2.4.1.ebuild:
  Stable on alpha.

  26 Jan 2005; Lukasz Strzygowski <lucass@gentoo.org> -pygtk-2.3.92.ebuild,
  -pygtk-2.3.93.ebuild, -pygtk-2.3.94.ebuild, -pygtk-2.3.96.ebuild,
  -pygtk-2.3.97.ebuild:
  Removed old unstable branch.

  09 Jan 2005; Sven Wegener <swegener@gentoo.org> pygtk-2.4.1.ebuild:
  Added missing digest entries. Added missing parentheses in SRC_URI.

  08 Jan 2005; Bryan Østergaard <kloeri@gentoo.org> pygtk-2.4.1.ebuild:
  Add doc USE flag, patch by Fernando Serboncini in bug 75308.

  03 Jan 2005; Joseph Jezak <josejx@gentoo.org> pygtk-2.4.1.ebuild:
  Marked ppc stable for bug #74333.

  22 Dec 2004; Dylan Carlson <absinthe@gentoo.org> pygtk-2.4.1.ebuild:
  Stable on amd64, bug 74333.

  22 Dec 2004; Gustavo Zacarias <gustavoz@gentoo.org> pygtk-2.4.1.ebuild:
  Stable on sparc

  22 Dec 2004; Lukasz Strzygowski <lucass@gentoo.org> pygtk-2.4.0.ebuild,
  pygtk-2.4.1.ebuild:
  Marked stable on x86.

*pygtk-2.4.1 (05 Nov 2004)

  05 Nov 2004; Lukasz Strzygowski <lucass@gentoo.org> +pygtk-2.4.1.ebuild:
  Version bump.

  17 Oct 2004; Dylan Carlson <absinthe@gentoo.org> pygtk-2.2.0.ebuild:
  stable on amd64.
