@@ -1,7 +1,7 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 183dd12c7e106a0967c789f5e85e65a3 ChangeLog 9619
+MD5 606688034be6fdf08eef06a73f4e8900 ChangeLog 9733
 MD5 8f03582f883634bcb2007a13b8350931 metadata.xml 487
 MD5 a244841efdd7989d4e751e0742ea911d pygtk-0.6.11-r1.ebuild 1948
 MD5 0320b3883c761bc3e567cc1f04a30e53 pygtk-0.6.11.ebuild 590
@@ -11,6 +11,7 @@ MD5 7ffd433ac94020e9547ed67c93806054 pygtk-2.0.0.ebuild 925
 MD5 5d2c87676a6ea4abbff3e7d05936c8fd pygtk-2.2.0.ebuild 2171
 MD5 a862b32cceff3054ef8e02b1294104fc pygtk-2.4.1.ebuild 2555
 MD5 6924a45f11d242201f4f1fe2dd5ec03d pygtk-2.6.0.ebuild 2541
+MD5 7cdcd06c38768caef68c47a78cca5217 pygtk-2.6.1.ebuild 2541
 MD5 f7476a916a6add9b10800b1f5bf31e98 files/digest-pygtk-0.6.11 64
 MD5 f7476a916a6add9b10800b1f5bf31e98 files/digest-pygtk-0.6.11-r1 64
 MD5 24c9de51067b362e1e30dd1d3019e1b0 files/digest-pygtk-1.99.13-r1 65
@@ -19,10 +20,11 @@ MD5 f0923e335952213318838067c14df0a0 files/digest-pygtk-2.0.0-r1 64
 MD5 a6372d851a8b936f2df258b93a5bc719 files/digest-pygtk-2.2.0 64
 MD5 39ecd0ee60f11eff2a596002e0ddf34d files/digest-pygtk-2.4.1 129
 MD5 19690d7b7578eaf46c0ce7d12936dac3 files/digest-pygtk-2.6.0 129
+MD5 305e4c07dfd9d7d6969fd60f0d3941fc files/digest-pygtk-2.6.1 129
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.0 (GNU/Linux)
 
-iD8DBQFCNtMJRkyva5PS18kRAj3SAJ4pM1AqwtMr0hv+oSvPhKJsiDSyCQCdGaiw
-o3azJGBnlAeLHr7Tm71hB44=
-=Kh8m
+iD8DBQFCOAzlRkyva5PS18kRAgV0AJ4uW1HlONS3eKkE0/PAK9qsdle+lwCfZnjT
+Hlr4Uu2IsLpookOtqGIlqv0=
+=TQn4
 -----END PGP SIGNATURE-----
