@@ -1,0 +1,2 @@
+MD5 b4610829e4f57b5538dfa3b8f1fbe026 pygtk-2.6.1.tar.bz2 729460
+MD5 b7c7f1aaaf24165d4cb2a5f4e2225d34 pygtk2reference.tbz2 604463
