@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/pygtk
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/pygtk/ChangeLog,v 1.76 2005/03/15 12:18:05 liquidx Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/pygtk/ChangeLog,v 1.77 2005/03/16 10:39:14 liquidx Exp $
+
+*pygtk-2.6.1 (16 Mar 2005)
+
+  16 Mar 2005; Alastair Tse <liquidx@gentoo.org> +pygtk-2.6.1.ebuild:
+  version bump
 
   15 Mar 2005; Alastair Tse <liquidx@gentoo.org> pygtk-2.4.1.ebuild,
   pygtk-2.6.0.ebuild:
